feat(config): add tiered settings system with custom fork cloning support
Implement comprehensive configuration management with environment-specific
settings (development, staging, production) and add support for building
custom Open WebUI forks from user-provided Git repositories.

Key changes:
- Add tiered settings classes with appropriate defaults per environment
- Implement credential management with AES-256-GCM encryption
- Add Git repository service for SSH and HTTPS authentication
- Create enhanced pipeline system with step-by-step build control
- Add new API endpoints for credentials, repositories, and pipelines
- Update database models with Credential, GitRepository, BuildOutput
- Expand .env.example with comprehensive configuration documentation
- Add structured JSON logging with colored console output option
- Update requirements.txt with security and async dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,238 @@
-# AWS Configuration
-AWS_ACCOUNT="123456789012"
-AWS_REGION="eu-west-1"
-REPO_NAME="my-open-webui"
+# Open WebUI Customizer - Environment Configuration
+# This file shows all available configuration options with examples
+# for different environments (development, staging, production)
 
-# Optional configurations
-IMAGE_TAG_SUFFIX="-custom"
-BASE_IMAGE="ghcr.io/open-webui/open-webui:main"
+# =============================================================================
+# ENVIRONMENT SELECTION
+# =============================================================================
+# Controls which tiered settings are loaded (default: development)
+# Options: development, staging, production
+ENVIRONMENT=development
+
+# =============================================================================
+# DATABASE SETTINGS
+# =============================================================================
+# Database connection URL (varies by environment)
+# Development: SQLite in local directory
+DATABASE_URL=sqlite:///./customizer.db
+
+# Staging: PostgreSQL example
+# DATABASE_URL=postgresql://user:password@localhost:5432/openwebui_staging
+
+# Production: PostgreSQL with connection pooling
+# DATABASE_URL=postgresql://user:password@db.example.com:5432/openwebui_prod
+
+# Database connection pool settings
+DATABASE__POOL_SIZE=5
+DATABASE__MAX_OVERFLOW=10
+DATABASE__POOL_TIMEOUT=30
+DATABASE__POOL_RECYCLE=3600
+DATABASE__ECHO=false
+
+# Auto-create tables (development/staging only)
+DATABASE__AUTO_CREATE_TABLES=true
+
+# =============================================================================
+# SECURITY SETTINGS
+# =============================================================================
+# JWT secret key for authentication
+# Generate with: openssl rand -hex 32
+SECURITY__SECRET_KEY=your-secret-key-change-in-production
+
+# JWT algorithm and expiration
+SECURITY__ALGORITHM=HS256
+SECURITY__ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# Encryption settings
+# Required in production, optional in development
+SECURITY__REQUIRE_ENCRYPTION_KEY=false
+SECURITY__ENCRYPTION_KEY=dev-encryption-key-32-bytes-long
+
+# CORS origins (varies by environment)
+# Development: Allow all origins
+SECURITY__CORS_ORIGINS=["*"]
+
+# Staging: Specific staging domains
+# SECURITY__CORS_ORIGINS=["https://staging.example.com", "http://localhost:3000"]
+
+# Production: Only production domains
+# SECURITY__CORS_ORIGINS=["https://app.example.com"]
+
+# Rate limiting
+# Disabled in development, enabled in production
+SECURITY__RATE_LIMIT_ENABLED=false
+SECURITY__RATE_LIMIT_REQUESTS=100
+SECURITY__RATE_LIMIT_WINDOW=60
+
+# Error handling (detailed errors in development)
+SECURITY__DETAILED_ERRORS=true
+
+# =============================================================================
+# GIT SETTINGS
+# =============================================================================
+# Git operation timeout in seconds
+GIT__TIMEOUT=300
+
+# SSH key settings
+GIT__SSH_KEY_SIZE=2048
+GIT__SSH_KNOWN_HOSTS_FILE=null
+
+# Repository validation
+# Maximum repository size in MB (relaxed in development)
+GIT__MAX_REPO_SIZE_MB=5000
+
+# Allowed Git hosts (dev mode allows any host)
+GIT__ALLOW_ANY_GIT_HOST=true
+
+# Specific allowed hosts (for production)
+# GIT__ALLOWED_GIT_HOSTS=["github.com", "gitlab.com", "bitbucket.org"]
+
+# =============================================================================
+# PIPELINE SETTINGS
+# =============================================================================
+# Build timeout in seconds (longer in development)
+PIPELINE__BUILD_TIMEOUT=3600
+
+# Maximum concurrent builds
+PIPELINE__MAX_CONCURRENT_BUILDS=1
+
+# Workspace settings
+PIPELINE__WORKSPACE_DIR=/tmp/open_webui_builds
+PIPELINE__WORKSPACE_CLEANUP_HOURS=1
+
+# Output settings
+PIPELINE__DEFAULT_RETENTION_DAYS=1
+PIPELINE__MAX_OUTPUT_SIZE_MB=1000
+
+# =============================================================================
+# REGISTRY SETTINGS
+# =============================================================================
+# Container registry timeout
+REGISTRY__TIMEOUT=600
+
+# Docker settings
+REGISTRY__DOCKER_API_VERSION=auto
+REGISTRY__DOCKER_BASE_URL=unix://var/run/docker.sock
+
+# Image size limit in GB
+REGISTRY__MAX_IMAGE_SIZE_GB=5
+REGISTRY__IMAGE_PULL_TIMEOUT=900
+
+# =============================================================================
+# LOGGING SETTINGS
+# =============================================================================
+# Log level (varies by environment)
+# Development: DEBUG, Staging: INFO, Production: WARNING
+LOGGING__LOG_LEVEL=DEBUG
+
+# Log format (text in development, json in production)
+LOGGING__LOG_FORMAT=text
+
+# Structured logging (disabled in development)
+LOGGING__ENABLE_STRUCTURED_LOGGING=false
+
+# File logging (optional)
+LOGGING__LOG_FILE=null
+LOGGING__LOG_MAX_SIZE_MB=100
+LOGGING__LOG_BACKUP_COUNT=5
+
+# =============================================================================
+# API SETTINGS
+# =============================================================================
+# API information
+API__TITLE="Open WebUI Customizer API"
+API__DESCRIPTION="API for customizing Open WebUI with custom branding and builds"
+API__VERSION="1.0.0"
+
+# Request limits (relaxed in development)
+API__MAX_REQUEST_SIZE_MB=1000
+
+# Pagination settings
+API__DEFAULT_PAGE_SIZE=50
+API__MAX_PAGE_SIZE=1000
+
+# =============================================================================
+# SERVER SETTINGS
+# =============================================================================
+# Server host and port
+HOST=0.0.0.0
+PORT=8000
+
+# Debug mode (varies by environment)
+DEBUG=true
+
+# =============================================================================
+# ENVIRONMENT-SPECIFIC EXAMPLES
+# =============================================================================
+
+# ----- DEVELOPMENT SETTINGS -----
+# Uncomment for development environment
+# ENVIRONMENT=development
+# DEBUG=true
+# DATABASE__ECHO=true
+# DATABASE__AUTO_CREATE_TABLES=true
+# SECURITY__REQUIRE_ENCRYPTION_KEY=false
+# SECURITY__CORS_ORIGINS=["*"]
+# SECURITY__RATE_LIMIT_ENABLED=false
+# SECURITY__DETAILED_ERRORS=true
+# GIT__ALLOW_ANY_GIT_HOST=true
+# GIT__TIMEOUT=3600
+# LOGGING__LOG_LEVEL=DEBUG
+# LOGGING__LOG_FORMAT=text
+
+# ----- STAGING SETTINGS -----
+# Uncomment for staging environment
+# ENVIRONMENT=staging
+# DEBUG=false
+# DATABASE__ECHO=false
+# DATABASE__AUTO_CREATE_TABLES=true
+# SECURITY__REQUIRE_ENCRYPTION_KEY=false
+# SECURITY__CORS_ORIGINS=["https://staging.example.com", "http://localhost:3000"]
+# SECURITY__RATE_LIMIT_ENABLED=true
+# SECURITY__DETAILED_ERRORS=true
+# GIT__ALLOW_ANY_GIT_HOST=false
+# GIT__ALLOWED_GIT_HOSTS=["github.com", "gitlab.com", "bitbucket.org", "dev.example.com"]
+# LOGGING__LOG_LEVEL=INFO
+# LOGGING__LOG_FORMAT=json
+
+# ----- PRODUCTION SETTINGS -----
+# Uncomment for production environment
+# ENVIRONMENT=production
+# DEBUG=false
+# DATABASE__ECHO=false
+# DATABASE__AUTO_CREATE_TABLES=false
+# SECURITY__REQUIRE_ENCRYPTION_KEY=true
+# SECURITY__CORS_ORIGINS=["https://app.example.com"]
+# SECURITY__RATE_LIMIT_ENABLED=true
+# SECURITY__DETAILED_ERRORS=false
+# GIT__ALLOW_ANY_GIT_HOST=false
+# GIT__ALLOWED_GIT_HOSTS=["github.com", "gitlab.com", "bitbucket.org"]
+# LOGGING__LOG_LEVEL=WARNING
+# LOGGING__LOG_FORMAT=json
+
+# =============================================================================
+# SECURITY NOTES
+# =============================================================================
+# 1. Always set a strong SECRET_KEY in production
+# 2. Use a proper ENCRYPTION_KEY for credential storage
+# 3. Restrict CORS origins to specific domains in production
+# 4. Enable rate limiting in production
+# 5. Use PostgreSQL instead of SQLite for production
+# 6. Disable detailed errors in production
+# 7. Require proper Git host validation in production
+# 8. Set appropriate log levels (WARNING/ERROR) in production
+
+# =============================================================================
+# QUICK START COMMANDS
+# =============================================================================
+# Generate a secure secret key:
+# openssl rand -hex 32
+
+# Generate an encryption key:
+# openssl rand -base64 32
+
+# Run with development settings:
+# fastapi run app/main.py --reload
+
+# Run with production settings:
+# ENVIRONMENT=production fastapi run app/main.py
