--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,90 @@
-fastapi>=0.68.0
-uvicorn>=0.15.0
-sqlalchemy>=1.4.0
-alembic>=1.7.0
-python-multipart>=0.0.5
-jinja2>=3.0.0
+# Core dependencies for Open WebUI Customizer
+
+# Web framework (FastAPI)
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+
+# Database
+sqlalchemy>=2.0.0
+alembic>=1.11.0
+
+# Data validation and serialization
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
+
+# Security and encryption
+cryptography>=41.0.0
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+
+# Git operations
+gitpython>=3.1.0
+
+# File handling and archives
+pathlib2>=2.3.0
+aiofiles>=23.2.0
+
+# Date/time utilities
+python-dateutil>=2.8.0
+
+# HTTP requests (for external service calls)
+requests>=2.31.0
+httpx>=0.25.0
+
+# Environment variable management
+python-dotenv>=1.0.0
+
+# Logging and monitoring
+structlog>=23.1.0
+
+# Async support
+asyncio>=3.4.3
+anyio>=3.7.0
+
+# Docker integration (for build operations)
+docker>=6.1.0
+
+# SSH operations (for Git SSH support)
+paramiko>=3.3.0
+
+# File compression and archives
+zipfile36>=0.1.3
+tarfile>=0.9.0
+
+# JSON schema validation
+jsonschema>=4.19.0
+
+# Testing (development dependencies)
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-mock>=3.11.0
+pytest-cov>=4.1.0
+httpx>=0.25.0  # For FastAPI testing
+
+# Code formatting and linting (development dependencies)
+black>=23.7.0
+isort>=5.12.0
+flake8>=6.0.0
+mypy>=1.7.0
+ruff>=0.1.0
+
+# Type checking support
+types-requests>=2.31.0
+types-python-dateutil>=2.8.0
+
+# Development tools
+pre-commit>=3.3.0
+
+# Database drivers
+psycopg2-binary>=2.9.0  # PostgreSQL (optional)
+pymysql>=1.1.0  # MySQL (optional)
+
+# Background task processing
+celery>=5.3.0  # Optional, for background jobs
+
+# Redis (for caching and session storage)
+redis>=5.0.0  # Optional
+
+# Monitoring and metrics
+prometheus-client>=0.19.0  # Optional
